<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_add_feed"
        android:icon="@drawable/content_new"
        app:showAsAction="always"
        android:title="@string/menu_add_feed"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_share_starred"
        android:icon="@drawable/social_share"
        app:showAsAction="always"
        android:title="@string/context_menu_share_starred"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/refresh"
        app:showAsAction="always"
        android:title="@string/menu_refresh"
        tools:ignore="AlwaysShowAction" />
    <item
            android:id="@+id/menu_hide_read"
            android:icon="@drawable/hide_reads"
            app:showAsAction="ifRoom"
            android:title="@string/context_menu_hide_read"
            tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_all_read"
        android:icon="@drawable/read_all"
        app:showAsAction="ifRoom"
        android:title="@string/menu_all_read"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_settings_main"
        android:icon="@drawable/action_settings"
        app:showAsAction="ifRoom"
        android:title="@string/menu_settings"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_help_and_feedback"
        app:showAsAction="withText"
        android:title="@string/menu_help_and_feedback"
        tools:ignore="AlwaysShowAction" />
</menu>