<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_star"
        android:icon="@drawable/rating_not_important"
        app:showAsAction="always"
        android:title="@string/menu_star"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/social_share"
        app:showAsAction="ifRoom"
        android:title="@string/menu_share" />
    <item
        android:id="@+id/menu_full_screen"
        android:icon="@drawable/full_screen"
        app:showAsAction="ifRoom"
        android:title="@string/menu_full_screen" />
    <item
        android:id="@+id/menu_mark_as_unread"
        android:title="@string/menu_mark_as_unread" />

</menu>