<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/content_edit"
        app:showAsAction="always"
        android:title="@string/context_menu_edit"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_add_feed"
        android:icon="@drawable/content_new"
        app:showAsAction="always"
        android:title="@string/menu_add_feed"
        tools:ignore="AlwaysShowAction" />
<!--    <item
        android:id="@+id/menu_refresh_main"
        android:icon="@drawable/refresh"
        app:showAsAction="always"
        android:title="@string/menu_refresh"
        tools:ignore="AlwaysShowAction" />-->
    <item
        android:id="@+id/menu_settings_main"
        android:icon="@drawable/action_settings"
        app:showAsAction="always"
        android:title="@string/menu_settings"
        tools:ignore="AlwaysShowAction" />
</menu>